--- a/index.html
+++ b/index.html
@@ -1,12 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>dev.finance$</title>
 </head>
+
 <body>
-    <p>teste</p>
-    <p>algo</p>
+
+    <header>
+        <h1>Dev.finance$</h1>
+    </header>
+
+    <main>
+
+        <section>
+            <div>
+                <h2>balanço</h2>
+                <p>R$5000,00</p>
+            </div>
+            <div>
+                <h3>saídas</h3>
+                <p>2000,00</p>
+            </div>
+            <div>
+                <h3>Total</h3>
+                <p>3000,00</p>
+            </div>            
+        </section>
+        <section>
+            <h2>Transações</h2>
+        </section>
+        
+
+        
+
+        <table>
+            <thead>
+                <tr>
+                    <th>Descricao</th>
+                    <th>Valor</th>
+                    <th>Data</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Luz</td>
+                    <td>R$500,00</td>
+                    <td>23/01/2021</td>
+                </tr>
+                <tr>
+                    <td>Criação de WebSite</td>
+                    <td>R$5000,00</td>
+                    <td>31/01/2021</td>
+                </tr>
+                <tr>
+                    <td>Alugel</td>
+                    <td>R$1000,00</td>
+                    <td>20/01/2021</td>
+                </tr>
+            </tbody>
+        </table>
+    </main>
+
+
+    <footer>
+        <P>Dev.finance$</P>
+    </footer>
 </body>
+
 </html>
