--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <main class="container">
 
         <section id="balance">
-            <h2>Balanço</h2>
+            <h2 class="sr-only">Balanço</h2>
             <div class="card">
                 <h3>Entradas</h3>
                 <p>R$5000,00</p>
@@ -32,7 +32,7 @@
             </div>
         </section>
         <section id="transaction">
-            <h2>Transações</h2>
+            <h2 class="sr-only">Transações</h2>
         </section>
 
         <table id="data-table">
