--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
     <header>
-        <h1 id="logo">Dev.finance$</h1>
+        <img src="./assets/logo.svg" alt="Logo dev finance">
     </header>
 
     <main class="container">
@@ -19,20 +19,30 @@
         <section id="balance">
             <h2 class="sr-only">Balanço</h2>
             <div class="card">
-                <h3>Entradas</h3>
+                <h3>
+                    <span>Entradas</span>
+                    <img src="./assets/income.svg" alt="Imagem de Entrada">
+                </h3>
                 <p>R$5000,00</p>
             </div>
             <div class="card">
-                <h3>saídas</h3>
+                <h3>
+                    <span>saídas</span>
+                    <img src="./assets/expense.svg" alt="Imagem de Saida">
+                </h3>
                 <p>2000,00</p>
             </div>
             <div class="cardTotal">
-                <h3>Total</h3>
+                <h3>
+                    <span>Total</span>
+                    <img src="./assets/total.svg" alt="Imagem de Total">
+                </h3>
                 <p>3000,00</p>
             </div>
         </section>
         <section id="transaction">
             <h2 class="sr-only">Transações</h2>
+            <a href="#" class="button new">+ Nova Transação</a>
         </section>
 
         <table id="data-table">
@@ -41,6 +51,7 @@
                     <th class="description">Descricao</th>
                     <th class="description">Valor</th>
                     <th class="date">Data</th>
+                    <th></th>
                 </tr>
             </thead>
             <tbody>
@@ -48,16 +59,25 @@
                     <td class="description">Luz</td>
                     <td class="income">R$500,00</td>
                     <td class="date">23/01/2021</td>
+                    <td>
+                        <img src="/assets/minus.svg" alt="Remover Transação">
+                    </td>
                 </tr>
                 <tr>
                     <td class="description">Criação de WebSite</td>
                     <td class="expense">R$5000,00</td>
                     <td class="date">31/01/2021</td>
+                    <td>
+                        <img src="/assets/minus.svg" alt="Remover Transação">
+                    </td>
                 </tr>
                 <tr>
                     <td>Alugel</td>
                     <td>R$1000,00</td>
                     <td>20/01/2021</td>
+                    <td>
+                        <img src="/assets/minus.svg" alt="Remover Transação">
+                    </td>
                 </tr>
             </tbody>
         </table>
